argo/screepsServer/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: db
    spec:
      containers:
        - image: mongo:latest
          name: db
          volumeMounts:
            - mountPath: /data/db
              name: screeps-mongo
      restartPolicy: Always
      volumes:
        - name: screeps-mongo
          persistentVolumeClaim:
            claimName: screeps-mongo
