argo/screepsServer/screeps-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: screeps
  name: screeps
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: screeps
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: screeps
    spec:
      containers:
        - env:
            - name: SCREEPS_CLI_HOST
              value: localhost
            - name: SCREEPS_CLI_PORT
              value: "21026"
            - name: SCREEPS_HOST
              value: 0.0.0.0
            - name: SCREEPS_PASS
              value: your_real_password
            - name: SCREEPS_PORT
              value: "21025"
            - name: STEAM_API_KEY
              value: your_real_key
          image: demannu/screeps-docker:latest
          name: screeps
          ports:
            - containerPort: 21025
              protocol: TCP
          volumeMounts:
            - mountPath: /world
              name: screeps-world
      restartPolicy: Always
      volumes:
        - name: screeps-world
          persistentVolumeClaim:
            claimName: screeps-world
