argo/screepsServer/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: web
    spec:
      containers:
        - env:
            - name: GUNICORN_CMD_ARGS
              value: --reload
            - name: PORT
              value: "8080"
            - name: PYTHONUNBUFFERED
              value: "TRUE"
            - name: REDIS_HOST
              value: redis
            - name: REDIS_PORT
              value: "6379"
            - name: THREADS
              value: "1"
            - name: WORKERS
              value: "4"
          image: web
          name: web
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: web-claim0
      restartPolicy: Always
      volumes:
        - name: web-claim0
          persistentVolumeClaim:
            claimName: web-claim0
