argo/screepsServer/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  name: screeps-server
  labels:
    io.kompose.service: db
spec:
  ports:
    - port: 27017  # MongoDB Standard-Port
  selector:
    io.kompose.service: db
