argo/screepsServer/screeps-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: screeps
  name: screeps
spec:
  ports:
    - name: "21025"
      port: 21025
      targetPort: 21025
  selector:
    io.kompose.service: screeps
